# UAP-ML-A

./: README.md  pyproject.toml
code/: UAP_Klasifikasi_Sampah.ipynb
src/: app.py  klasifikasi_sampah.py
src/Model/Model_InceptionV3/Evaluation/Test/: classification_report.txt
src/Model/Model_InceptionV3/Evaluation/Validation/: classification_report.txt
src/Model/Model_MobileNetV2/Evaluation/Test/: classification_report.txt
src/Model/Model_MobileNetV2/Evaluation/Validation/: classification_report.txt
